crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@repos__netbox-community-netbox__ee6cbdcefe1c522d718e880ea3f955e7683f2b9b__netbox__extras__templatetags__dashboard.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/netbox-community-netbox/ee6cbdcefe1c522d718e880ea3f955e7683f2b9b/netbox/extras/templatetags/dashboard.py
---
tag_rules:
  "netbox.extras.templatetags.dashboard::render_widget":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: widget
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs: {}
